[package]
name = "ferrous-irc"
version = "0.3.1"
authors = [ "Jack Champagne" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.x", features = ["full"] }
clap = { version = "4.0.x", features = ["derive"] }

[profile.release]
debug = false
